# YeMargin

./: README.md  kimi-export-e4140627-20260330-133538.md  kimi-export-e4140627-20260330-135002.md
pdf-reader-demo/: DEMO.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  rustup-init.sh  setup-cn.sh  setup.sh
pdf-reader-demo/src/: App.css  App.tsx  index.css
pdf-reader-demo/src-tauri/: .gitignore  Cargo.simple.toml  Cargo.toml  pdfium-mac-arm64.tgz  tauri.conf.json
pdf-reader-demo/src-tauri/capabilities/: default.json
pdf-reader-demo/src-tauri/src/: lib.rs  main.rs
pdf-reader-demo/src-tauri/src/pdf/: commands.rs  commands_test.rs  mod.rs
pdf-reader-demo/src/components/: PDFPage.tsx  PDFViewer.tsx  Sidebar.tsx  Toolbar.tsx
pdf-reader-demo/src/lib/: pdfjs.ts
pdf-reader-demo/src/stores/: appStore.ts
pdf-reader-demo/src/types/: index.ts
