[package]
name = "pdf-reader-demo"
version = "0.1.0"
description = "A smooth PDF reader built with Tauri"
edition = "2021"
rust-version = "1.75"

[lib]
name = "pdf_reader_demo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# PDF 处理 - 使用 pdfium-render（Google PDFium 的 Rust 绑定）
pdfium-render = { version = "0.8.24", features = ["sync"] }

# 图像处理 - 用于渲染后的处理
image = "0.25"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# UUID 生成
uuid = { version = "1.7", features = ["v4", "serde"] }

# 缓存
lru = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
